@@ -1,5 +1,8 @@
 2010-01-25  Frank Warmerdam  <warmerdam@pobox.com>
 
+	* src/pj_init,src/projects.h,src/pj_transform.c,nad/testvarious:
+	Correct seriously broken +lon_wrap implementation.  (#62)
+
 	* src/pj_mutex.c: fix creation of mutex on win32 to be in
 	unacquired state in pj_init_lock to avoid an extra reference. (#63)
 
